# robot_ur3e_manipulation

./: CMakeLists.txt  README.md  package.xml
action/: DeliverCoffeeAction.action
launch/: pick_and_place_advanced.launch.py  pick_and_place_primitive.launch.py  real_action_server.launch.py  real_pick_and_place_advanced.launch.py  real_service_server.launch.py  sim_action_server.launch.py  sim_pick_and_place_advanced.launch.py  sim_scene_objects.py  sim_service_server.launch.py
params/: goal_precision_real.yaml  goal_precision_sim.yaml  timeout_allowed.yaml
src/: action_server.cpp  pick_and_place_advanced.cpp  pick_and_place_primitive.cpp  scene_objects.cpp  service_server.cpp
srv/: DeliverCoffeeService.srv
